# central-api-cli

./: .gitignore  .readthedocs.yaml  README.md  cli.py  devcli.py  main.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-publish.yml
centralCLI/: __init__.py  central.py  cli.py  config.py  constants.py  utils.py
centralcli/: __init__.py  allcalls.py  caas.py  cache.py  central.py  cleaner.py  cli.py  cliadd.py  cliassign.py  clibatch.py  clicaas.py  clicancel.py  clicheck.py  cliclone.py  clicommon.py  cliconvert.py  clidel.py  clidelfirmware.py  clidev.py  clido.py  client.py  cliexport.py  clikick.py  clioptions.py  clirefresh.py  clirename.py  cliset.py  clisetfirmware.py  clishow.py  clishowaudit.py  clishowbandwidth.py  clishowbranch.py  clishowcloudauth.py  clishowfirmware.py  clishowmpsk.py  clishowospf.py  clishowoverlay.py  clishowtshoot.py  clishowuplink.py  clishowwids.py  (+25 more)
centralcli/boilerplate/: README.md  _cnx_allcalls.py  allcalls.py  configuration.py  firmware.py  guest.py  wlan.py
centralcli/boilerplate/2.5.3/: _firmware_2_5_3.py
centralcli/cache/: __init__.py  migrate.py  sqlite.py  tinydb.py
centralcli/classic/: client.py  utils.py
centralcli/classic/api/: __init__.py  aiops.py  central.py  cloudauth.py  configuration.py  device_management.py  firmware.py  guest.py  kms.py  monitoring.py  other.py  platform.py  rapids.py  routing.py  topology.py  troubleshooting.py  visualrf.py
centralcli/cli_levels/: clido.py
centralcli/clitree/: add.py  assign.py  caas.py  cancel.py  check.py  clone.py  convert.py  dev.py  export.py  generate.py  kick.py  migrate.py  refresh.py  rename.py  test.py  ts.py  tshoot.py  unassign.py  update.py  upgrade.py
centralcli/clitree/batch/: __init__.py  add.py  assign.py  batch.py  delete.py  update.py
centralcli/clitree/delete/: delete.py  firmware.py
centralcli/clitree/set/: firmware.py  set.py
centralcli/clitree/show/: audit.py  bandwidth.py  branch.py  cloudauth.py  firmware.py  mpsk.py  ospf.py  overlay.py  show.py  ts.py  wids.py
centralcli/cnx/: base.py  client.py  exceptions.py
centralcli/cnx/api/: __init__.py
centralcli/cnx/api/central/: monitoring.py
centralcli/cnx/api/glp/: devices.py  service_managers.py  subscriptions.py
centralcli/cnx/cleaners/: common.py
centralcli/cnx/formatters/: common.py  glp.py
centralcli/cnx/models/: cache.py
centralcli/models/: alerts.py  cache.py  common.py  config.py  formatter.py  imports.py  snow.py  sql.py  webhook.py  wids.py
centralcli/objects/: __init__.py  cache.py
centralcli/protobuf/: audit_pb2.py  audit_pb2.pyi  monitoring_pb2.py  monitoring_pb2.pyi  streaming_pb2.py  streaming_pb2.pyi
centralcli/webhooks/: __init__.py  nms_proxy.py  snow.py  watcher.py
config/: .gitignore  config.yaml.example  relink.sh
docs/: alternate_cli.rst  alternative_install.rst  build.py  centralcli.rst  cli.md  cli.rst  conf.py  extra_requirements.txt  index.rst  modules.rst  other_install.md  project_structure.rst  requirements.txt
docs/_ext/: richunstyle.py
docs/_static/: cencli.md  rtd.css
lib/centralCLI/: __init__.py  central.py  config.py  constants.py  utils.py
logs/: .gitignore
tests/: __init__.py  _mock_request.py  _test_data.py  cache_test.py  conftest.py  test_add.py  test_assign.py  test_b_ts.py  test_batch.py  test_caas.py  test_completion.py  test_del.py  test_devices.json.example  test_do.py  test_export.py  test_glp_classic.py  test_hook_proxy.py  test_library.py  test_mock_request_regex.py  test_rate_limit.py  test_show.py  test_show_wids.py  test_unassign.py  test_update.py  test_ws_client_decode.py  test_zdel.py  test_zz_completion.py  test_zzz_del_cleanup.py
