[tool.poetry]
name = "centralcli"
version = "5.2.1"
description = "A CLI for interacting with Aruba Central (Cloud Management Platform).  Facilitates bulk imports, exports, reporting.  A handy tool if you have devices managed by Aruba Central."
license = "MIT"
authors = ["Wade Wells (Pack3tL0ss) <wade@consolepi.org>"]
maintainers = ["Wade Wells (Pack3tL0ss) <wade@consolepi.org>"]
readme = "README.md"
repository = "https://github.com/Pack3tL0ss/central-api-cli"
documentation = "https://central-api-cli.readthedocs.org"
keywords = [
    "cli",
    "Aruba",
    "Aruba Networks",
    "Aruba Central",
    "HPE",
    "API",
    "RESTFUL",
    "REST"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.scripts]
cencli = "centralcli.cli:app"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
tabulate = ">=0.8"
halo = "*"
typer = ">=0.6,<0.11.0"
pylibyaml = ">=0.1.0"
PyYAML = ">=6"
tinydb = ">=4"
shellingham = ">=1"
pendulum = ">=2"
pycentral = ">=0.0.3"
aiohttp = ">=3"
asyncio = ">=3"
rich = ">=10"
tablib = ">=3"
jinja2 = "*"
pydantic = ">=1.9.0,<2.0.0"
ipaddress = "*"
fuzzywuzzy = "*"
levenshtein = "*"
click = "<=7.1.2"


# Optional dependencies see tool.poetry.extras
fastapi = {version = "*", optional = true}
uvicorn = {version = "*", optional = true}
psutil = {version = "*", optional = true}
cchardet = {version = ">=2.1", markers = "platform_system != 'Windows'", optional=true}
aiodns = {version = ">=1.1", optional = true}
Brotli = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pyflakes = ">=2"
pycodestyle = ">=2"
flake8 = ">=4"
pytest = ">=6"
black = ">=21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.ruff]
line-length = 181

[tool.poetry.extras]
hook-proxy = [
    "fastapi",
    "uvicorn",
    "psutil",
]
speedups = [
    "cchardet",
    "aiodns",
    "Brotli",
]
